# arca

./: .ahoy.yml  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/arca/: cli.py  config.py  db.py  padron.py  transport.py  wsaa.py  wsfe.py
tests/: conftest.py  test_cli.py  test_db.py  test_padron_cache.py  test_wsaa.py  test_wsfe.py
